objects/Shop_Drawing_1__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account that the noted contact is related to.</inlineHelpText>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_as_corrected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved as corrected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>fills in with the name of the Approver from the related Issue Tracker, used in conjunction with approval processes</inlineHelpText>
        <label>Assigned to:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shop_Drawings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Address__c</fullName>
        <formula>Contact__r.Email</formula>
        <inlineHelpText>Email address of the related contact.</inlineHelpText>
        <label>Contact Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the contact from the account.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Shop_Drawings_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Enter the date the submittal request was received from the field.</inlineHelpText>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Closed_Date__c</fullName>
        <label>Issue Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Number__c</fullName>
        <formula>Issue_Tracker__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field was created to make a &quot;Common Field&quot; for the Issue Tracker Joined Report.</inlineHelpText>
        <label>Issue Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Submitted_Date__c</fullName>
        <label>Issue Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Tracker__c</fullName>
        <inlineHelpText>This is the issue tracker number that the shop drawing is associated with.</inlineHelpText>
        <label>Issue Tracker</label>
        <referenceTo>Request_for_Information_RFI__c</referenceTo>
        <relationshipLabel>Shop Drawings</relationshipLabel>
        <relationshipName>Shop_Drawings_1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes_and_Additional_Information__c</fullName>
        <inlineHelpText>Use this section to add detailed notes.</inlineHelpText>
        <label>Notes and Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is hidden and is filled in a by a trigger. We need this so we can automatically link the records to the related project so we have clean related lists on the project layout.</description>
        <label>Project Link</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Shop Drawings</relationshipLabel>
        <relationshipName>Shop_Drawings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Issue_Tracker__r.ASProject__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>Issue_Tracker__r.ASProject__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project related to the shop drawing.</inlineHelpText>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Response_Date__c</fullName>
        <inlineHelpText>The target date that you are asking the approver to respond by.</inlineHelpText>
        <label>Requested Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <inlineHelpText>The response details to the shop drawing submitted from the approver. Must be filled out before shop drawing can be complete.</inlineHelpText>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revise_and_Resubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revise and Resubmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_Users__c</fullName>
        <label>Selected Users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Highlight__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&quot;Approval Pending&quot;),IMAGE( &quot;https://na6.salesforce.com/servlet/servlet.FileDownload?file=015800000014viY&quot;, &quot;Submitted Pending1&quot;), 
IF(ISPICKVAL(Status__c,&quot;Rejected&quot;),IMAGE( &quot;https://na6.salesforce.com/servlet/servlet.FileDownload?file=015800000014viE&quot;, &quot;Rejected1&quot;), 
IF(ISPICKVAL(Status__c,&quot;Cancelled&quot;),IMAGE( &quot;https://na6.salesforce.com/servlet/servlet.FileDownload?file=0158000000151bq&quot;, &quot;Cancelled&quot;), 
IF(ISPICKVAL(Status__c,&quot;Revise and Resubmit&quot;),IMAGE( &quot;https://na6.salesforce.com/servlet/servlet.FileDownload?file=015800000014viO&quot;, &quot;Revise and Resubmit1&quot;), 
IF(ISPICKVAL(Status__c,&quot;Approved as Corrected&quot;),IMAGE( &quot;https://na6.salesforce.com/servlet/servlet.FileDownload?file=015800000014vi9&quot;, &quot;Approved as Corrected1&quot;), 
IF(ISPICKVAL(Status__c,&quot;Approved&quot;),IMAGE( &quot;https://na6.salesforce.com/servlet/servlet.FileDownload?file=015800000014vi4&quot;, &quot;Approved&quot;), 
&quot;&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This changes based on the status of the shop drawing.</inlineHelpText>
        <label>Status Highlight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Used to track and manage the status of the shop drawing.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Revise and Resubmit</fullName>
                </value>
                <value>
                    <fullName>Approved as Corrected</fullName>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Field used as a Common field for Issue Tracker joined report</description>
        <formula>Issue_Tracker__r.Subject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <formula>TEXT(Issue_Tracker__r.Track__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Track</label>
        <type>Text</type>
    </fields>
    <label>Shop Drawing</label>
    <nameField>
        <label>Shop Drawing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shop Drawings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Requested_Response_Greater_Than_24_Hours</fullName>
        <active>false</active>
        <description>Do not allow the requested response date to be set &lt;= TODAY().  Made inactive as of Sprint 2018.06 c</description>
        <errorConditionFormula>AND(ISPICKVAL( Status__c,&quot;New&quot;), 
Requested_Response_Date__c &lt;= TODAY())</errorConditionFormula>
        <errorDisplayField>Requested_Response_Date__c</errorDisplayField>
        <errorMessage>The requested Response Date has to be at least 1 day from today.</errorMessage>
    </validationRules>
</CustomObject>